--- a/src/output.css
+++ b/src/output.css
@@ -9,8 +9,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-red-700: oklch(50.5% 0.213 27.518);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-950: oklch(28.2% 0.091 267.935);
     --color-gray-50: oklch(98.5% 0.002 247.839);
@@ -425,6 +423,9 @@
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
+  .gap-14 {
+    gap: calc(var(--spacing) * 14);
+  }
   .gap-y-12 {
     row-gap: calc(var(--spacing) * 12);
   }
@@ -456,10 +457,6 @@
     border-style: var(--tw-border-style);
     border-width: 0px;
   }
-  .border-4 {
-    border-style: var(--tw-border-style);
-    border-width: 4px;
-  }
   .border-t-0 {
     border-top-style: var(--tw-border-style);
     border-top-width: 0px;
@@ -467,10 +464,6 @@
   .border-r-0 {
     border-right-style: var(--tw-border-style);
     border-right-width: 0px;
-  }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
   }
   .border-b-4 {
     border-bottom-style: var(--tw-border-style);
@@ -516,9 +509,6 @@
   }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
-  }
-  .pt-6 {
-    padding-top: calc(var(--spacing) * 6);
   }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
@@ -677,6 +667,11 @@
       margin-block: calc(var(--spacing) * 20);
     }
   }
+  .md\:h-28 {
+    @media (width >= 640px) {
+      height: calc(var(--spacing) * 28);
+    }
+  }
   .md\:h-55 {
     @media (width >= 640px) {
       height: calc(var(--spacing) * 55);
@@ -727,9 +722,19 @@
       width: calc(8/10 * 100%);
     }
   }
-  .md\:w-\[58\.6\%\] {
+  .md\:w-112\.5 {
     @media (width >= 640px) {
-      width: 58.6%;
+      width: calc(var(--spacing) * 112.5);
+    }
+  }
+  .md\:w-135 {
+    @media (width >= 640px) {
+      width: calc(var(--spacing) * 135);
+    }
+  }
+  .md\:w-135\.25 {
+    @media (width >= 640px) {
+      width: calc(var(--spacing) * 135.25);
     }
   }
   .md\:w-\[69\.8\%\] {
@@ -747,9 +752,9 @@
       width: 75.3%;
     }
   }
-  .md\:w-\[88\.3\%\] {
+  .md\:w-\[79\.95\%\] {
     @media (width >= 640px) {
-      width: 88.3%;
+      width: 79.95%;
     }
   }
   .md\:w-\[130\.2\%\] {
@@ -789,6 +794,11 @@
   .md\:flex-row {
     @media (width >= 640px) {
       flex-direction: row;
+    }
+  }
+  .md\:gap-2 {
+    @media (width >= 640px) {
+      gap: calc(var(--spacing) * 2);
     }
   }
   .md\:gap-6 {
@@ -847,6 +857,16 @@
   .lg\:mx-0 {
     @media (width >= 992px) {
       margin-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:mt-10 {
+    @media (width >= 992px) {
+      margin-top: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:mt-20 {
+    @media (width >= 992px) {
+      margin-top: calc(var(--spacing) * 20);
     }
   }
   .lg\:ml-auto {
@@ -968,6 +988,11 @@
   .lg\:gap-0 {
     @media (width >= 992px) {
       gap: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:gap-8 {
+    @media (width >= 992px) {
+      gap: calc(var(--spacing) * 8);
     }
   }
   .lg\:gap-12 {
