--- a/src/output.css
+++ b/src/output.css
@@ -17,6 +17,7 @@
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --default-font-family: var(--font-sans);
@@ -239,8 +240,8 @@
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
-  .mb-25 {
-    margin-bottom: calc(var(--spacing) * 25);
+  .mt-25 {
+    margin-top: calc(var(--spacing) * 25);
   }
   .contents {
     display: contents;
@@ -256,6 +257,9 @@
   }
   .table {
     display: table;
+  }
+  .h-2 {
+    height: calc(var(--spacing) * 2);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -295,6 +299,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
   }
   .w-25 {
     width: calc(var(--spacing) * 25);
@@ -457,6 +464,10 @@
     border-style: var(--tw-border-style);
     border-width: 0px;
   }
+  .border-t {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
   .border-t-0 {
     border-top-style: var(--tw-border-style);
     border-top-width: 0px;
@@ -464,6 +475,10 @@
   .border-r-0 {
     border-right-style: var(--tw-border-style);
     border-right-width: 0px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
   }
   .border-b-4 {
     border-bottom-style: var(--tw-border-style);
@@ -483,8 +498,14 @@
   .border-t-\[\#495dcf\]\/20 {
     border-top-color: color-mix(in oklab, #495dcf 20%, transparent);
   }
+  .border-t-blue-950 {
+    border-top-color: var(--color-blue-950);
+  }
   .border-b-\[\#495dcf\]\/20 {
     border-bottom-color: color-mix(in oklab, #495dcf 20%, transparent);
+  }
+  .border-b-blue-950 {
+    border-bottom-color: var(--color-blue-950);
   }
   .border-b-red-400 {
     border-bottom-color: var(--color-red-400);
@@ -509,6 +530,9 @@
   }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
+  }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
   }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
@@ -543,6 +567,10 @@
   .leading-\[200\%\] {
     --tw-leading: 200%;
     line-height: 200%;
+  }
+  .font-light {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
@@ -586,6 +614,11 @@
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .peer-open\:block {
+    &:is(:where(.peer):is([open], :popover-open, :open) ~ *) {
+      display: block;
+    }
   }
   .target\:border-4 {
     &:target {
@@ -827,6 +860,11 @@
       border-top-width: 0px;
     }
   }
+  .md\:text-\[16px\] {
+    @media (width >= 640px) {
+      font-size: 16px;
+    }
+  }
   .md\:text-\[18px\] {
     @media (width >= 640px) {
       font-size: 18px;
@@ -852,6 +890,12 @@
     @media (width >= 640px) {
       --tw-leading: 155%;
       line-height: 155%;
+    }
+  }
+  .md\:leading-\[225\%\] {
+    @media (width >= 640px) {
+      --tw-leading: 225%;
+      line-height: 225%;
     }
   }
   .lg\:mx-0 {
