--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,7 @@
     --color-blue-950: oklch(28.2% 0.091 267.935);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
@@ -234,14 +235,29 @@
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
   }
+  .my-12 {
+    margin-block: calc(var(--spacing) * 12);
+  }
+  .my-12\.5 {
+    margin-block: calc(var(--spacing) * 12.5);
+  }
+  .my-14 {
+    margin-block: calc(var(--spacing) * 14);
+  }
   .my-25 {
     margin-block: calc(var(--spacing) * 25);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
   .mt-25 {
     margin-top: calc(var(--spacing) * 25);
+  }
+  .mb-25 {
+    margin-bottom: calc(var(--spacing) * 25);
   }
   .contents {
     display: contents;
@@ -433,6 +449,23 @@
   .gap-14 {
     gap: calc(var(--spacing) * 14);
   }
+  .gap-25 {
+    gap: calc(var(--spacing) * 25);
+  }
+  .space-y-20 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 20) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 20) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-25 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 25) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 25) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .gap-y-12 {
     row-gap: calc(var(--spacing) * 12);
   }
@@ -498,14 +531,8 @@
   .border-t-\[\#495dcf\]\/20 {
     border-top-color: color-mix(in oklab, #495dcf 20%, transparent);
   }
-  .border-t-blue-950 {
-    border-top-color: var(--color-blue-950);
-  }
   .border-b-\[\#495dcf\]\/20 {
     border-bottom-color: color-mix(in oklab, #495dcf 20%, transparent);
-  }
-  .border-b-blue-950 {
-    border-bottom-color: var(--color-blue-950);
   }
   .border-b-red-400 {
     border-bottom-color: var(--color-red-400);
@@ -518,6 +545,12 @@
   }
   .bg-red-400 {
     background-color: var(--color-red-400);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
@@ -547,6 +580,9 @@
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
+  .text-\[12px\] {
+    font-size: 12px;
+  }
   .text-\[15px\] {
     font-size: 15px;
   }
@@ -568,6 +604,10 @@
     --tw-leading: 200%;
     line-height: 200%;
   }
+  .leading-\[300\%\] {
+    --tw-leading: 300%;
+    line-height: 300%;
+  }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
@@ -579,6 +619,10 @@
   .font-normal {
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
+  }
+  .tracking-\[5px\] {
+    --tw-tracking: 5px;
+    letter-spacing: 5px;
   }
   .text-blue-950 {
     color: var(--color-blue-950);
@@ -598,6 +642,19 @@
   .opacity-100 {
     opacity: 100%;
   }
+  .shadow-\[495DCF\]\/20 {
+    --tw-shadow-alpha: 20%;
+    --tw-shadow: 495DCF;
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0_8_8_-4\] {
+    --tw-shadow: 0 8 8 -4 var(--tw-shadow-color, currentcolor);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0_8px_8px_-4px\] {
+    --tw-shadow: 0 8px 8px -4px var(--tw-shadow-color, currentcolor);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-\[0_10px_20px_-5px\] {
     --tw-shadow: 0 10px 20px -5px var(--tw-shadow-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -608,12 +665,32 @@
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, #495dcf 5%, transparent) var(--tw-shadow-alpha), transparent);
     }
   }
+  .shadow-black {
+    --tw-shadow-color: #000;
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-black) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-black\/20 {
+    --tw-shadow-color: color-mix(in srgb, #000 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-black) 20%, transparent) var(--tw-shadow-alpha), transparent);
+    }
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .outline-0 {
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
   }
   .peer-open\:block {
     &:is(:where(.peer):is([open], :popover-open, :open) ~ *) {
@@ -755,6 +832,11 @@
       width: calc(8/10 * 100%);
     }
   }
+  .md\:w-110\.5 {
+    @media (width >= 640px) {
+      width: calc(var(--spacing) * 110.5);
+    }
+  }
   .md\:w-112\.5 {
     @media (width >= 640px) {
       width: calc(var(--spacing) * 112.5);
@@ -824,6 +906,11 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
+  .md\:grid-cols-\[2fr_1fr\] {
+    @media (width >= 640px) {
+      grid-template-columns: 2fr 1fr;
+    }
+  }
   .md\:flex-row {
     @media (width >= 640px) {
       flex-direction: row;
@@ -858,6 +945,11 @@
     @media (width >= 640px) {
       border-top-style: var(--tw-border-style);
       border-top-width: 0px;
+    }
+  }
+  .md\:text-\[14px\] {
+    @media (width >= 640px) {
+      font-size: 14px;
     }
   }
   .md\:text-\[16px\] {
@@ -1101,6 +1193,11 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-space-y-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
@@ -1111,6 +1208,10 @@
   inherits: false;
 }
 @property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
   syntax: "*";
   inherits: false;
 }
@@ -1248,9 +1349,11 @@
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
+      --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
