--- a/src/output.css
+++ b/src/output.css
@@ -235,17 +235,8 @@
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
   }
-  .my-12 {
-    margin-block: calc(var(--spacing) * 12);
-  }
-  .my-12\.5 {
-    margin-block: calc(var(--spacing) * 12.5);
-  }
   .my-14 {
     margin-block: calc(var(--spacing) * 14);
-  }
-  .my-25 {
-    margin-block: calc(var(--spacing) * 25);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
@@ -253,11 +244,8 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-25 {
-    margin-top: calc(var(--spacing) * 25);
-  }
-  .mb-25 {
-    margin-bottom: calc(var(--spacing) * 25);
+  .mr-auto {
+    margin-right: auto;
   }
   .contents {
     display: contents;
@@ -276,6 +264,9 @@
   }
   .h-2 {
     height: calc(var(--spacing) * 2);
+  }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -301,9 +292,6 @@
   .h-144 {
     height: calc(var(--spacing) * 144);
   }
-  .h-351 {
-    height: calc(var(--spacing) * 351);
-  }
   .h-\[67\.7\%\] {
     height: 67.7%;
   }
@@ -318,6 +306,9 @@
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-22 {
+    width: calc(var(--spacing) * 22);
   }
   .w-25 {
     width: calc(var(--spacing) * 25);
@@ -342,6 +333,9 @@
   }
   .w-111\.75 {
     width: calc(var(--spacing) * 111.75);
+  }
+  .w-\[80\%\] {
+    width: 80%;
   }
   .w-\[82\.7\%\] {
     width: 82.7%;
@@ -452,20 +446,6 @@
   .gap-25 {
     gap: calc(var(--spacing) * 25);
   }
-  .space-y-20 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 20) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 20) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-25 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 25) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 25) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
   .gap-y-12 {
     row-gap: calc(var(--spacing) * 12);
   }
@@ -540,6 +520,9 @@
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
+  .bg-blue-950 {
+    background-color: var(--color-blue-950);
+  }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
@@ -548,6 +531,15 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .bg-clip-text {
+    background-clip: text;
+  }
+  .fill-white {
+    fill: var(--color-white);
+  }
+  .stroke-white {
+    stroke: var(--color-white);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -642,15 +634,6 @@
   .opacity-100 {
     opacity: 100%;
   }
-  .shadow-\[495DCF\]\/20 {
-    --tw-shadow-alpha: 20%;
-    --tw-shadow: 495DCF;
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[0_8_8_-4\] {
-    --tw-shadow: 0 8 8 -4 var(--tw-shadow-color, currentcolor);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-\[0_8px_8px_-4px\] {
     --tw-shadow: 0 8px 8px -4px var(--tw-shadow-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -680,10 +663,6 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .outline-0 {
-    outline-style: var(--tw-outline-style);
-    outline-width: 0px;
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -724,10 +703,31 @@
       }
     }
   }
+  .hover\:bg-red-400 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-red-400);
+      }
+    }
+  }
   .hover\:bg-white {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:fill-red-400 {
+    &:hover {
+      @media (hover: hover) {
+        fill: var(--color-red-400);
+      }
+    }
+  }
+  .hover\:stroke-red-400 {
+    &:hover {
+      @media (hover: hover) {
+        stroke: var(--color-red-400);
       }
     }
   }
@@ -792,11 +792,6 @@
       height: calc(var(--spacing) * 96);
     }
   }
-  .md\:h-110 {
-    @media (width >= 640px) {
-      height: calc(var(--spacing) * 110);
-    }
-  }
   .md\:h-117 {
     @media (width >= 640px) {
       height: calc(var(--spacing) * 117);
@@ -830,6 +825,11 @@
   .md\:w-8\/10 {
     @media (width >= 640px) {
       width: calc(8/10 * 100%);
+    }
+  }
+  .md\:w-18 {
+    @media (width >= 640px) {
+      width: calc(var(--spacing) * 18);
     }
   }
   .md\:w-110\.5 {
@@ -914,6 +914,11 @@
   .md\:flex-row {
     @media (width >= 640px) {
       flex-direction: row;
+    }
+  }
+  .md\:justify-between {
+    @media (width >= 640px) {
+      justify-content: space-between;
     }
   }
   .md\:gap-2 {
@@ -1005,6 +1010,11 @@
       margin-top: calc(var(--spacing) * 20);
     }
   }
+  .lg\:mr-auto {
+    @media (width >= 992px) {
+      margin-right: auto;
+    }
+  }
   .lg\:ml-auto {
     @media (width >= 992px) {
       margin-left: auto;
@@ -1028,11 +1038,6 @@
   .lg\:h-127 {
     @media (width >= 992px) {
       height: calc(var(--spacing) * 127);
-    }
-  }
-  .lg\:h-153 {
-    @media (width >= 992px) {
-      height: calc(var(--spacing) * 153);
     }
   }
   .lg\:h-full {
@@ -1083,6 +1088,11 @@
   .lg\:w-\[77\%\] {
     @media (width >= 992px) {
       width: 77%;
+    }
+  }
+  .lg\:w-\[77\.1\%\] {
+    @media (width >= 992px) {
+      width: 77.1%;
     }
   }
   .lg\:w-full {
@@ -1192,11 +1202,6 @@
 @property --tw-skew-y {
   syntax: "*";
   inherits: false;
-}
-@property --tw-space-y-reverse {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1349,7 +1354,6 @@
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
-      --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
