--- a/src/output.css
+++ b/src/output.css
@@ -195,8 +195,14 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-3 {
+    top: calc(var(--spacing) * 3);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -270,6 +276,9 @@
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -311,6 +320,9 @@
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
   }
   .w-22 {
     width: calc(var(--spacing) * 22);
@@ -403,6 +415,24 @@
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .scale-75 {
+    --tw-scale-x: 75%;
+    --tw-scale-y: 75%;
+    --tw-scale-z: 75%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-80 {
+    --tw-scale-x: 80%;
+    --tw-scale-y: 80%;
+    --tw-scale-z: 80%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  .scale-85 {
+    --tw-scale-x: 85%;
+    --tw-scale-y: 85%;
+    --tw-scale-z: 85%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
@@ -474,13 +504,13 @@
     border-top-right-radius: calc(infinity * 1px);
     border-bottom-right-radius: calc(infinity * 1px);
   }
+  .rounded-b-\[5px\] {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .border-0 {
-    border-style: var(--tw-border-style);
-    border-width: 0px;
   }
   .border-4 {
     border-style: var(--tw-border-style);
@@ -547,11 +577,17 @@
   .stroke-white {
     stroke: var(--color-white);
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -578,6 +614,9 @@
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
   .text-\[12px\] {
     font-size: 12px;
   }
@@ -589,6 +628,10 @@
   }
   .text-\[30px\] {
     font-size: 30px;
+  }
+  .leading-\[120\%\] {
+    --tw-leading: 120%;
+    line-height: 120%;
   }
   .leading-\[135\%\] {
     --tw-leading: 135%;
@@ -618,6 +661,10 @@
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
   }
+  .tracking-\[-0\.25px\] {
+    --tw-tracking: -0.25px;
+    letter-spacing: -0.25px;
+  }
   .tracking-\[5px\] {
     --tw-tracking: 5px;
     letter-spacing: 5px;
@@ -630,6 +677,9 @@
   }
   .uppercase {
     text-transform: uppercase;
+  }
+  .italic {
+    font-style: italic;
   }
   .underline {
     text-decoration-line: underline;
@@ -673,24 +723,70 @@
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
-  .transition-all {
-    transition-property: all;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .outline-none {
     --tw-outline-style: none;
     outline-style: none;
   }
-  .peer-open\:block {
-    &:is(:where(.peer):is([open], :popover-open, :open) ~ *) {
+  .group-open\:block {
+    &:is(:where(.group):is([open], :popover-open, :open) *) {
       display: block;
     }
   }
-  .target\:border-4 {
-    &:target {
-      border-style: var(--tw-border-style);
-      border-width: 4px;
+  .group-open\:rotate-180 {
+    &:is(:where(.group):is([open], :popover-open, :open) *) {
+      rotate: 180deg;
+    }
+  }
+  .group-hover\:text-blue-950 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        color: var(--color-blue-950);
+      }
+    }
+  }
+  .group-\[\.err\]\:block {
+    &:is(:where(.group):is(.err) *) {
+      display: block;
+    }
+  }
+  .group-\[\.open\]\:block {
+    &:is(:where(.group):is(.open) *) {
+      display: block;
+    }
+  }
+  .group-\[\.open\]\:rotate-180 {
+    &:is(:where(.group):is(.open) *) {
+      rotate: 180deg;
+    }
+  }
+  .group-\[\.open\]\:fill-red-400 {
+    &:is(:where(.group):is(.open) *) {
+      fill: var(--color-red-400);
+    }
+  }
+  .group-\[\.open\]\:\!stroke-red-400 {
+    &:is(:where(.group):is(.open) *) {
+      stroke: var(--color-red-400) !important;
+    }
+  }
+  .group-\[\.open\]\:stroke-red-400 {
+    &:is(:where(.group):is(.open) *) {
+      stroke: var(--color-red-400);
+    }
+  }
+  .group-\[\.open\]\:stroke-red-400\! {
+    &:is(:where(.group):is(.open) *) {
+      stroke: var(--color-red-400) !important;
+    }
+  }
+  .group-\[\.open\]\:text-red-400 {
+    &:is(:where(.group):is(.open) *) {
+      color: var(--color-red-400);
+    }
+  }
+  .peer-open\:block {
+    &:is(:where(.peer):is([open], :popover-open, :open) ~ *) {
+      display: block;
     }
   }
   .hover\:border-blue-600 {
@@ -1182,6 +1278,21 @@
   inherits: false;
   initial-value: 0;
 }
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -1348,6 +1459,9 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
