--- a/style.css
+++ b/style.css
@@ -8,4 +8,13 @@
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1280px;
     --breakpoint-2xl: 1536px;
+    --outline: none;
+    --ring: none;
+}
+
+@base {
+    * {
+        outline: none;
+        ring: none;
+    }
 }
